--- a/.github/workflows/nightly_test.yml
+++ b/.github/workflows/nightly_test.yml
@@ -38,7 +38,7 @@ jobs:
     # Prevents from running on forks where no custom runners are available
     if: ${{ github.repository_owner == 'verilog-to-routing' }}
 
-    timeout-minutes: 420
+    timeout-minutes: 820 #420
 
     container: ubuntu:jammy
 
